syntax = "proto3";

package pb;

import "google/protobuf/timestamp.proto";
import "entities/product.proto";

option go_package = "github.com/HoangLong2502/pharmago_be/pb";

message DetailProductRequest {
  int32 id = 1;
}

message DetailProductResponse {
  int32 code = 1;
  string message = 2;
  ProductDetail details = 3;
}